<?xml version="1.0" encoding="utf-8"?>
<shortcuts xmlns:android="http://schemas.android.com/apk/res/android">
    <shortcut
        android:shortcutId="add_expense"
        android:enabled="true"
        android:icon="@drawable/ic_shortcut_expense"
        android:shortcutShortLabel="@string/shortcut_add_expense"
        android:shortcutLongLabel="@string/shortcut_add_expense_long">
        <intent
            android:action="android.intent.action.VIEW"
            android:targetPackage="com.jvcerezo.exitplan"
            android:targetClass="com.jvcerezo.exitplan.MainActivity"
            android:data="sandalan://quick-add/expense" />
    </shortcut>
    <shortcut
        android:shortcutId="add_income"
        android:enabled="true"
        android:icon="@drawable/ic_shortcut_income"
        android:shortcutShortLabel="@string/shortcut_add_income"
        android:shortcutLongLabel="@string/shortcut_add_income_long">
        <intent
            android:action="android.intent.action.VIEW"
            android:targetPackage="com.jvcerezo.exitplan"
            android:targetClass="com.jvcerezo.exitplan.MainActivity"
            android:data="sandalan://quick-add/income" />
    </shortcut>
    <shortcut
        android:shortcutId="scan_receipt"
        android:enabled="true"
        android:icon="@drawable/ic_shortcut_scan"
        android:shortcutShortLabel="@string/shortcut_scan"
        android:shortcutLongLabel="@string/shortcut_scan_long">
        <intent
            android:action="android.intent.action.VIEW"
            android:targetPackage="com.jvcerezo.exitplan"
            android:targetClass="com.jvcerezo.exitplan.MainActivity"
            android:data="sandalan://scan-receipt" />
    </shortcut>
    <shortcut
        android:shortcutId="open_chat"
        android:enabled="true"
        android:icon="@drawable/ic_shortcut_chat"
        android:shortcutShortLabel="@string/shortcut_chat"
        android:shortcutLongLabel="@string/shortcut_chat_long">
        <intent
            android:action="android.intent.action.VIEW"
            android:targetPackage="com.jvcerezo.exitplan"
            android:targetClass="com.jvcerezo.exitplan.MainActivity"
            android:data="sandalan://chat" />
    </shortcut>
</shortcuts>
